--- a/project.ipynb
+++ b/project.ipynb
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "3da963df",
    "metadata": {},
    "outputs": [],
@@ -270,7 +270,7 @@
     "PORTFOLIO_COLS = random.sample(PORTFOLIO_COLS_INIT, k=21) # Esme's note: it should be k=len(PORTFOLIO_COLS_INIT) in general for a comprehensive search\n",
     "\n",
     "ANNUAL_FACTOR = 252\n",
-    "MAX_SUBSET_SIZE = 5   # exhaustive for k=2,3,4\n", # Esme's note: In an actual run, 5 would be 21 (for portfolio build out)
+    "MAX_SUBSET_SIZE = 5   # exhaustive for k=2,3,4  # Esme's note: In an actual run, 5 would be 21 (for portfolio build out)\n",
     "TOP_K = 10            # how many results to show per subset size"
    ]
   },
